<resources>
    <string name="app_name">QRThing</string>
    <string name="actTimeKeeper">Time Keeper</string>
    <string name="actLeaderboard">Leaderboard</string>
    <string name="bSendLog">Send Log</string>
    <string name="editLogTime">Edit Log Time</string>
    <string name="defaultStartTime">00:00:00</string>
    <string name="selectRunner">Select Runner</string>
    <string name="selectEvent">Select Event</string>
    <string name="editStartTime">Edit Starttime</string>
    <string name="actScan">Scan</string>
    <string name="bSet">Set</string>
    <string name="bCancel">Cancel</string>
</resources>
