<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.ScanAct">

    <TextView
        android:id="@+id/tvSelectRunner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectRunner"
        android:textAlignment="center"
        android:textSize="25sp" />

    <NumberPicker
        android:id="@+id/npSelectRunner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvSelectTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editLogTime"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bSelectTime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/defaultStartTime"
        android:textSize="26sp" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16sp"
        android:layout_weight="1"
        android:onClick="sendLog"
        android:text="@string/bSendLog"
        android:textSize="26sp" />

</LinearLayout>