<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.TimeKeeperAct">

    <TextView
        android:id="@+id/tvSelectEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectEvent"
        android:textAlignment="center"
        android:textSize="25sp" />

    <NumberPicker
        android:id="@+id/npSelectEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"/>

    <TextView
        android:id="@+id/tvEditTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editStartTime"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bEditTime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/defaultStartTime"
        android:textSize="26sp" />

    <Button
        android:id="@+id/scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16sp"
        android:layout_weight="1"
        android:onClick="goScan"
        android:text="@string/actScan"
        android:textSize="26sp" />

</LinearLayout>